# rinha-compiladores

./: Cargo.toml  README.md  SPECS.md  justfile  rust-toolchain.toml  shell.nix
examples/: combination.json  concat.json  concat.rinha  condition.json  condition.rinha  fib.json  function.json  function.rinha  hello.json  sub.json  sum.json
xpto/: Cargo.toml
xpto/src/: error.rs  main.rs
xpto/src/nodes/: binary.rs  binary_op.rs  bool.rs  call.rs  closure.rs  file.rs  function.rs  ifi.rs  int.rs  leti.rs  location.rs  mod.rs  parameter.rs  print.rs  str.rs  term.rs  val.rs  var.rs
