[package]
name = "xpto"
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
