cargo-features = ["workspace-inheritance"]

[package]
name = "xpto"
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
